--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -490,6 +490,7 @@ a.msg_link_pseudo:hover {
     min-height:80px;
     overflow:auto;
     padding:10px 0px;
+    word-wrap:break-word;
 }
 
 .msg_sign,.msg_sign2 { /* Signature du membre */
